# sibyl-research-system

./: .gitignore  CLAUDE.md  README.md  README_CN.md  config.example.yaml  pyproject.toml  requirements.txt  setup.sh
.claude/agents/: sibyl-heavy.md  sibyl-light.md  sibyl-standard.md
docs/: architecture.md  codex-integration.md  configuration.md  feishu-lark-setup.md  getting-started.md  mcp-servers.md  plugin-commands.md  session_prompts.md  setup-guide.md  ssh-gpu-setup.md  研究过程记录.md
docs/plans/: 2026-03-09-experiment-state-tracking-design.md  2026-03-09-experiment-state-tracking-plan.md  2026-03-09-stage-checkpoint.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/commands/: _orchestration-loop.md  continue.md  debug.md  evolve.md  init.md  migrate-server.md  migrate.md  pivot.md  resume.md  start.md  status.md  stop.md  sync.md
sibyl/: __init__.py  _paths.py  cli.py  config.py  context_builder.py  demo.py  event_logger.py  evolution.py  experiment_records.py  experiment_recovery.py  gpu_scheduler.py  orchestrate.py  prompt_templates.py  reflection.py  runtime_assets.py  workspace.py
sibyl/prompts/: _common.md  _common_zh.md  codex_reviewer.md  codex_writer.md  comparativist.md  contrarian.md  critic.md  editor.md  empiricist.md  experimenter.md  final_critic.md  innovator.md  interdisciplinary.md  latex_writer.md  (+21 more)
tests/: conftest.py  test_cli.py  test_control_plane_contracts.py  test_experiment_recovery.py  test_gpu_scheduler.py  test_orchestrate.py  test_sentinel.py  test_support.py  test_workspace.py  test_workspace_checkpoint.py
(+265 files in other folders)
